<resources>
    <string name="app_name">Swipelist</string>
    <string name="quick_add">Create list/New list</string>
    <string name="swipelist">Swipelist</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="saved_lists">Saved lists</string>
    <string name="categories">Categories</string>
    <string name="no_saved_lists">There are no lists saved</string>
    <string name="save_list">Save list</string>
    <string name="list_saved">List saved</string>
    <string name="copy_list">Copy</string>
    <string name="list_copied">List copied</string>
    <string name="paste_title">Add items</string>
    <string name="paste_hint">Paste items separated by commas or new lines</string>
    <string name="add_title_hint">Add title</string>
    <string name="title_prompt">List title</string>
    <string name="title_hint">Title</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="user_created">User created</string>
    <string name="login_failed">Invalid credentials</string>
    <string name="create_account">Create account</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="list_instructions">Swipe left or right to delete item</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>

    <string name="add_to_list">Add to list</string>
    <string name="add_item_title">Add item</string>
    <string name="add_item_hint">Item name(s), separated by commas</string>
    <string name="drag_handle">Drag handle</string>
    <string name="save_item_to_category_title">Which category would you like to save this item to?</string>
    <string name="item_saved_to_category">"%1$s" saved to %2$s</string>
    <string name="add_category_title">Add category</string>
    <string name="add_category_hint">Category name</string>
    <string name="rename_category_title">Rename category</string>
    <string name="delete_category_title">Delete category</string>
    <string name="delete_category_message">Delete "%1$s"?</string>
    <string name="add_keywords_title">Add keywords for %1$s</string>
    <string name="add_keywords_hint">Keywords, separated by commas</string>
    <string name="keywords_for">Keywords for %1$s</string>
    <string name="add_keyword">Add keyword</string>
    <string name="delete_keyword_title">Delete keyword</string>
    <string name="delete_keyword_message">Delete "%1$s"?</string>
    <string name="search_categories_hint">Search items</string>
    <string name="press_back_once_more_to_exit">Press back once more to exit</string>
</resources>
